fix: Undeclare width of dl component on mobile

--- a/src/components/Dl.module.scss
+++ b/src/components/Dl.module.scss
@@ -34,7 +34,6 @@
 @include mobile {
   .horizontal {
     flex-wrap: wrap;
-    width: 100%;
 
     .dt,
     .dd {
